[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmd-analysis"
version = "0.1.0"
description = "Parquet-first NDT analysis pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "nmd-analysis contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "pyyaml",
  "h5py",
  "scipy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "typer",
]

[project.urls]
Documentation = "https://nmd-analysis.readthedocs.io"
Source = "https://github.com/nmd-analysis/nmd-analysis"

[project.scripts]
nmd-analysis = "nmd_analysis.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nmd_analysis*"]
